questr/static/css/theme.css
html {
	overflow-x: hidden;
	margin: 0;
	padding: 0;
	background: white;
	height: 100%;
}
 
body {
	background: #e9eaed;
	position: relative;
	margin: 0;
	min-height: 100%;
	font-family: 'lucida grande',tahoma,verdana,arial,sans-serif;
	font-size: 11px;
	color: #333;
	line-height: 1.28;
	padding: 0;
	text-align: left;
	direction: ltr;
	unicode-bidi: embed;
	overflow-x: hidden;
 }
 
 
/************ footer ****************/
footer {
	background: white;
	padding-top: 20px;
	
	position: absolute;
	bottom: 0px;
	display: block;
	width:100%;
	margin-top: 220px;
}
 
 footer ul {
	 list-style-type: none;
 }

footer ul.list li {
	margin-bottom: -6px;
}

footer ul.list li.social-links {
	margin-top: 5px;
}

footer small.title {
	font-weight: bold;
}

.btn-circle span {
	color: #cbcbd0;
}

.btn-circle-large span {
	color: #cbcbd0;
}

.btn-circle {
	width: 26px;
	height: 26px;
	text-align: center;
	padding: 5px 0;
	font-size: 12px;
	line-height: 1.428571429;
	border-radius: 50%;
	background: transparent;
	border-style: solid;
	border-width: 2px;
	border-color: #b7c8d4;
	color: #b7c8d4;
	margin-right: 1px;

	-moz-transition:all 0.3s ease;
	-webkit-transition:all 0.3s ease;
	-ms-transition:all 0.3s ease;
	-o-transition:all 0.3s ease;
	transition:all 0.3s ease;

}

.btn-circle-large {
	width: 46px;
	height: 46px;
	text-align: center;
	padding: 5px 0;
	font-size: 24px;
	line-height: 1.428571429;
	border-radius: 50%;
	background: transparent;
	border-style: solid;
	border-width: 2px;
	border-color: #b7c8d4;
	color: #b7c8d4;
	margin-right: 5px;

	-moz-transition:all 0.3s ease;
	-webkit-transition:all 0.3s ease;
	-ms-transition:all 0.3s ease;
	-o-transition:all 0.3s ease;
	transition:all 0.3s ease;

}

.twitter .btn-circle:hover,  .twitter .btn-circle-large:hover {
	border-color: #1ab2e8;
	color: #1ab2e8;
	-moz-transition:all 0.3s ease;
	-webkit-transition:all 0.3s ease;
	-ms-transition:all 0.3s ease;
	-o-transition:all 0.3s ease;
	transition:all 0.3s ease;
}

.facebook .btn-circle:hover, .facebook .btn-circle-large:hover {
	border-color: #4568b8;
	color: #4568b8;
	-moz-transition:all 0.3s ease;
	-webkit-transition:all 0.3s ease;
	-ms-transition:all 0.3s ease;
	-o-transition:all 0.3s ease;
	transition:all 0.3s ease;
}

.tumblr .btn-circle:hover, .tumblr .btn-circle-large:hover {
	border-color: #507490;
	color: #507490;
	-moz-transition:all 0.3s ease;
	-webkit-transition:all 0.3s ease;
	-ms-transition:all 0.3s ease;
	-o-transition:all 0.3s ease;
	transition:all 0.3s ease;
}

.linkedin .btn-circle:hover, .linkedin .btn-circle-large:hover {
	border-color: #007ebd;
	color: #007ebd;
	-moz-transition:all 0.3s ease;
	-webkit-transition:all 0.3s ease;
	-ms-transition:all 0.3s ease;
	-o-transition:all 0.3s ease;
	transition:all 0.3s ease;
}

.email .btn-circle:hover, .email .btn-circle-large:hover {
	border-color: rgba(150,150,150,1);
	color: rgba(150,150,150,1);
	-moz-transition:all 0.3s ease;
	-webkit-transition:all 0.3s ease;
	-ms-transition:all 0.3s ease;
	-o-transition:all 0.3s ease;
	transition:all 0.3s ease;
}

.wechat .btn-circle:hover, .wechat .btn-circle-large:hover {
	border-color: #a1d92d;
	color: #a1d92d;
	-moz-transition:all 0.3s ease;
	-webkit-transition:all 0.3s ease;
	-ms-transition:all 0.3s ease;
	-o-transition:all 0.3s ease;
	transition:all 0.3s ease;
}
/************ ./footer ****************/



















 
hr {
	display: block;
	height: 1px;
	color: #fdfdfd;
}

.inline  {
	display: inline;	
}

.no-margin {
	margin: 0;
}

.no-padding {
	padding: 0;
}

.body-prop {
	border-bottom-left-radius: 5px;
	border-bottom-right-radius: 5px;
	border-top-left-radius: 5px;
	border-top-right-radius: 5px;
	background: white;
}

.border-colours {
	border: 1px solid;
	border-color: #e5e6e9 #dfe0e4 #d0d1d5;
	-webkit-border-width: 3px;
}

.no-borders {
	border: none;
}
 
 /*************** Well, Panels ***************/
.well {
	background: white;
}

.other-well {
	background: #fafafa;
}

.panel-default {
	background: white;
}

.panel-default .panel-heading {
	background: white;
	border-bottom: 1px;
	border-bottom-style: solid;
	border-color: #f4f4f4;
}

.panel-default .panel-heading .panel-title {
	font-size: 20px;
	display: inline;
}

.panel-default label.control-label p {
	font-weight: 600;
	color: #666;
}

.panel-default .panel-heading .panel-title ul {
	display: inline;
	margin: 0;
	padding: 0;
}

.panel-default .panel-heading .panel-title ul li {
	display: inline;	
	margin: 0;
}

.panel-default .panel-heading .panel-title ul li a {
	margin-right: 10px;
	color: #a5a5a5;
}

.panel-default .panel-heading .panel-title ul li.active a {
	color: #5f97d8;
	border-bottom: #5f97d8;
	border-bottom-style: solid;
	border-bottom-width: 4px;
}

.panel-default .panel-heading .panel-title ul li a:hover {
	color: #5f97d8;
	border-bottom: #5f97d8;
	border-bottom-style: solid;
	border-bottom-width: 4px;	
}

.panel-default .panel-heading a.pull-right {
	font-size: small;
	margin-top: 5px;
}


.panel-default .panel-content, .panel-default panel-body {
	background: white;
}

.panel-default .panel-footer {
	border-top: 1px;
	border-top-style: solid;
	border-color: #f4f4f4;
	background: white;
}


/************* Buttons ************/
.btn-classic {
  background-color: #ffffff;
  *background-color: #f6f7f8;
  background-image: -moz-linear-gradient(top, #ffffff 0%, #f6f7f8 100%);
  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ffffff), to(#f6f7f8));
  background-image: -webkit-linear-gradient(top, #ffffff, #f6f7f8);
  background-image: -o-linear-gradient(top, #ffffff, #f6f7f8);
  background-image: linear-gradient(to bottom, #ffffff, #f6f7f8);
  background-repeat: repeat-x;
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fffafafa', endColorstr='#ffe6e6e6', GradientType=0);
  filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
  
  
border: 1px solid;
-webkit-border-radius: 2px;
-webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, .05);
-webkit-box-sizing: content-box;
font-family: 'Helvetica Neue', Helvetica, Arial, 'lucida grande',tahoma,verdana,arial,sans-serif;
-webkit-font-smoothing: antialiased;
font-weight: bold;
text-align: center;
vertical-align: middle;

border-color: #cdced0 #c5c6c8 #b6b7b9;
color: #4e5665;
text-shadow: 0 1px 0 #fff;


}

select {
	-webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
    text-indent: 0.01px;
    text-overflow: ”;
    
    padding-bottom: 8px;
    padding-top: 8px;
    padding-left: 12px;
    padding-right: 15px;
}

select option {

}


.btn-classic:hover,
.btn-classic:focus,
.btn-classic:active,
.btn-classic.active,
.btn-classic.disabled,
.btn-classic[disabled] {
	color: #4e5665;
}

.dropdown button.btn:hover,
.dropdown button.btn:focus,
.dropdown button.btn:active,
.dropdown button.btn.active,
.dropdown button.btn.disabled,
.dropdown button.btn[disabled],
.btn-grad:hover,
.btn-grad:focus,
.btn-grad:active,
.btn-grad:active,
.btn-grad:disabled,
.btn-grad[disabled] {
  color: #000000;
  background-color: #e6e6e6;
  *background-color: #d9d9d9;
}

.dropdown button.btn:active,
.dropdown button.btn.active,
.btn-grad.active,
.btn-grad.active {
  background-color: #cdcdcd \9;
}






/******** Pagination ************/
.pagination li a {
	color: #777777;
}

.pagination li a:hover {
	color: #333333;
	background: white;
}

.pagination li.active a, .pagination li.active a:hover {
	background: grey;
	border-color: grey;
}


/********* Dropdown *********/
.dropdown-menu {
	text-align: center;
}


/************* Alert *****************/
.alert-purple { border-color: #694D9F;background: #694D9F;color: #fff; }
.alert-info-alt { border-color: #B4E1E4;background: #81c7e1;color: #fff; }
.alert-danger-alt { border-color: #B63E5A;background: #E26868;color: #fff; }
.alert-warning-alt { border-color: #F3F3EB;background: #E9CEAC;color: #fff; }
.alert-success-alt { border-color: #19B99A;background: #20A286;color: #fff; }
.alert a {color: gold;}



/************* Images *****************/
.img-responsive {
    display: block;
    height: auto;
    max-width: 100%;
    margin: 0;
}

.ratio {
    background-position: center center;
    background-repeat: no-repeat;
    background-size: cover;
    height: 0;
    padding-bottom: 100%;
    position: relative;
    width: 100%;
    margin: 0;
}

.imageUploader {
    height: auto;
    width: 10px;
}

/************* Input Boxes *****************/
input.form-control, input.form-control, textarea.form-control {
	border: 1px;
	border-style: solid;
	border-color: #d1d3d7;
	background: white;
}

input.form-control:focus, textarea.form-control:focus {
	border: 1px;
	border-style: solid;
	border-color: #5f97d8;
}

/*************** Primary Navbar ***************/
.brand {
	z-index: 9;
	position: absolute;
	width: 100%;
	margin-top: 6px;
	background: none;
	font-size: 18px;
	font-weight: bolder;
}

.navbar-left input.search {
	background: #bce0f5;
	border-width: 3px;
	border-style: solid;
	border-color: aqua;
}

.nav button.btn span {
	border-color: transparent;
	background: aqua;
	color: aqua;
}

.profileImg {
	float: left;
	max-height: 10px;
	display: inline-block;
}

#notifications .dropdown-menu li a {
	min-width: 350px;
	max-height: 20px;
}
#notifications .dropdown-menu li .imgBox {
	margin: 0;
	padding: 0;
}

nav .glyphicon {
	font-size: large;
	margin-right: 6px;
}


/*************** Secondary Navbar ***************/
.secondaryNavRow ul {
	background: white;
	list-style-type:none;
	margin:0;
	padding:0;
	text-align: center;
	
	border-top-style: solid;
	border-top-width: 1px;
	border-top-color: #f8f8f8;
}

.secondaryNavRow ul li {
	display: inline-block;
	background: white;
	margin: 0;
	padding: 0;
	height: 30px;
}

.secondaryNavRow ul li:hover {
	border-bottom-style: solid;
	border-bottom-width: 6px;
	border-bottom-color: #5f97d8;
}

.secondaryNavRow ul li.active {
	border-bottom-style: solid;
	border-bottom-width: 6px;
	border-bottom-color: #5f97d8;
}

.secondaryNavRow ul li.quest {
	margin-right: 30px;
}


  
.inputBackground {
	background: #f2f2f2;
	padding: 10px;
}
 
.white {
	color: white;
}

.grey {
	color: #4e5665;
}

.light-grey {
	color: #9197a3;
}

.lighter-grey {
	color: #e9eaed;
}

.theme-colour {
	color: #5f97d8;
}


 /********* no image post **********/
.no-image {
 	background: #5f97d8;
	 max-width: 100%;
	 padding: 0;
 }
 
.no-image h1 {
	text-align: center;
	margin: 0;
	padding-top: 18px;
	padding-bottom: 24px;
}

.no-image .glyphicon {
	color: white;
} 

